k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - edpl8888888m.space
    secretName: example-app-tls
  rules:
  - host: edpl8888888m.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microservice1-service
            port:
              number: 3001
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: microservice2-service
            port:
              number: 3002
